# AI-firewall

./: README.md  _ui_test.js  netlify.toml  package.json
.github/workflows/: ci.yml
config/: default.json  enterprise-policy.json
csharp/: AiShield.sln
csharp/AiShield.Core/: AiShield.Core.csproj
csharp/AiShield.Core/Config/: ConfigLoader.cs
csharp/AiShield.Core/Events/: EventBus.cs
csharp/AiShield.Core/Models/: ShieldModels.cs
csharp/AiShield.Core/Monitor/: NetworkMonitor.cs  ProcessMonitor.cs
csharp/AiShield.Dashboard/: AiShield.Dashboard.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TrayIcon.cs
csharp/AiShield.Service/: AiShield.Service.csproj  BackendSupervisor.cs  Program.cs  ShieldWorker.cs
docs/: ARCHITECTURE.md  CONFIGURATION.md  INSTALLATION.md  NEXT.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md
linux/aishield-ebpf/: Makefile  README.md  aishield_connect.bpf.c
native/aishield-native/: Cargo.toml
native/aishield-native/src/: lib.rs  wfp.rs
native/minifilter/: README.md  aishield_minifilter.c  aishield_minifilter.inf  aishield_minifilter.vcxproj  aishield_protocol.h  build.ps1
python/: requirements.txt
python/aishield/: __init__.py  __main__.py  service.py
python/tests/: test_api_approval.py  test_events.py  test_ml_heuristics.py  test_resolver.py  test_wfp.py
scripts/: build-native.ps1  configure-browser-gpo.ps1  install-minifilter.ps1  install-service.ps1  install.ps1  launch-dashboard.ps1  package.ps1  production-audit.ps1  production-audit.py  start-policy-server.ps1  start.ps1  test-live-approval.py
(+45 files in other folders)
